# jogumantime

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  하던일_슬랙봇.md
app/: main.py
app/api/: routes.py
app/core/: briefing.py  notification.py  priority.py  scheduler.py  weekly_report.py
app/db/: database.py  models.py  queries.py
app/integrations/: claude_ai.py  confluence.py  figma.py  google_calendar.py  jira.py
app/slack_bot/: bot.py  commands.py  dm.py  views.py
